[project]
name = "arxiv-monitoring-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukael",email = "dev@lukael.kr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
